# cyUECliTool

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  UECliTool.uplugin  UEEditorMCP.uplugin  setup_mcp.bat  setup_mcp.ps1  ue.cmd  ue.ps1
Python/: pyproject.toml  requirements.txt  ue.py  ue_bridge.py  ue_mcp_cli.py
Python/tests/: test_cli.py  test_cli_parser_v04.py  test_config.py  test_connection.py  test_daemon.py  test_formatter.py  test_runtime.py
Python/ue_cli_tool/: __init__.py  cli.py  cli_parser.py  command_proxy.py  config.py  connection.py  context.py  daemon.py  formatter.py  ipc.py  metrics.py  permissions.py  pipeline.py  runtime.py  server.py  server_blueprint.py  server_blueprint_graph.py  server_blueprint_management.py  server_blueprint_nodes.py  server_editor.py  server_factory.py  server_materials.py  server_umg.py  server_umg_widget.py  server_unreal_logs.py  tracer.py
Python/ue_cli_tool/registry/: __init__.py  actions.py
Python/ue_cli_tool/resources/: conventions.md  error_codes.md
Python/ue_cli_tool/skills/: __init__.py  animgraph.md  datatable.md  editor-level.md  graph-nodes.md  layout.md  materials.md  niagara.md  profiler-test.md  python-api.md  sequencer.md  umg-widgets.md  variables-functions.md
Python/ue_cli_tool/tools/: __init__.py  blueprint.py  editor.py  materials.py  nodes.py  nodes_create.py  nodes_graph.py  project.py  (+2 more)
Python/ue_editor_mcp/: connection.py  context.py  metrics.py  script.py  server.py  server_blueprint.py  server_factory.py  server_umg.py  server_unified.py  server_unreal_logs.py  tracer.py
(+130 files in other folders)
